# hkick-api

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Rocket.toml  docs.apib  readme.md  rustfmt.toml  setup_database.sh
.github/workflows/: main.yml
migrations/2019-09-18-181007_create_users/: up.sql
migrations/2019-09-19-170926_create_teams/: up.sql
migrations/2019-09-20-214649_create_matches/: up.sql
migrations/2019-09-20-215000_create_games/: up.sql
migrations/2019-09-21-141931_create_players/: up.sql
migrations/2019-10-01-101632_setup/: down.sql  up.sql
src/: elo.rs  errors.rs  main.rs  matchmaking.rs  models.rs  rating.rs  routes.rs  schema.rs
src/models/: duels.rs  games.rs  matches.rs  players.rs  teams.rs
src/routes/: duels.rs  games.rs  matches.rs  players.rs
