[package]
name = "hkick-api"
version = "0.1.0"
authors = ["Marvin Altemeier"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
diesel = { version = "1.4.3", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4.9", features = ["serde"] }
rocket_cors = "0.5.1"

# Required for alpine build
libsqlite3-sys = { version = "*", features = ["bundled"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_sqlite_pool", "json"]

[profile.release]
lto = true
